--- a/public/menu-bar.css
+++ b/public/menu-bar.css
@@ -9,8 +9,8 @@
       padding: 8px;
       justify-content: space-around;
       align-items: center;
-      position: fixed;
-      bottom: 0;
+      position: absolute;
+      bottom: -1px;
       border-radius: 10px 10px 0 0;
       z-index: 1000;
     }
