hstory page deign refactor & functinality

--- a/public/menu-bar.css
+++ b/public/menu-bar.css
@@ -13,7 +13,7 @@
       bottom: -1px;
       border-radius: 10px 10px 0 0;
       z-index: 1000;
-      transition: all 0.3s ease;
+      /* transition: all 0.3s ease; */
     }
 
     .menu-bar-icon-wrapper > div{
@@ -26,7 +26,7 @@
       flex-direction: column;
       color: #ffffffa3 !important;
       cursor: pointer;
-      transition: all 0.3s ease;
+      /* transition: all 0.3s ease; */
     }
 
     .menu-bar-icon-wrapper *{
@@ -35,7 +35,7 @@
 
     .menu-bar-icon-wrapper .current-page {
       display: block;
-      transition: all 0.3s ease;
+      /* transition: all 0.3s ease; */
 
     }
 
@@ -68,7 +68,7 @@
       box-shadow: 0 5px 15px rgba(2, 14, 46, 0.7);
       position: absolute;
       top: -24px;
-      transition: all 0.3s ease;
+      /* transition: all 0.3s ease; */
     }
 
     #current-page+span {
