--- a/public/css/calc.css
+++ b/public/css/calc.css
@@ -4,7 +4,7 @@
   --calc-body-color: linear-gradient(180deg, #0e0e0e, #333333);
   --text-color-keys: #000;
   --screen-color: #222f38;
-  --screen-box-shadow: inset 0 2px 10px 1px #018874;
+  --screen-box-shadow: none;
   --button-color: #fff;
   --mode-label-color: #1b1b1b;
   --keys-font-weight: 500;
@@ -108,6 +108,7 @@ main {
 #top-screen {
   margin-top: 0.1em;
   display: flex;
+  visibility: hidden;
 }
 
 #top-screen * {
@@ -125,12 +126,13 @@ main {
   position: absolute;
   display: none;  
   right:0.5em;
+  cursor:pointer;
 }
 #scroll-up-btn{
 top:0;
 }
 #scroll-down-btn{
-bottom: -0.3em;
+bottom: -0.2em;
 }
 
 #conversion-mode {
@@ -175,7 +177,7 @@ bottom: -0.3em;
 }
 
 #result {
-  margin-bottom: -0.3em;
+  margin-bottom: 0.3em;
   text-align: end;
   font-size: 1em;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
